--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <body>
   <header>
+    <link rel="stylesheet" href="style.css">
     <img src="https://t3.ftcdn.net/jpg/06/98/37/42/360_F_698374295_5M5uHZSa0USgN8TpUnDXee2KSXWJjKcZ.jpg">
     <p>STREET-FOOD</p>
     <p>FIZHMA</p>
