--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <h1>Піцца <i>Купить</i></h1>
       <h1>Бургер
         <i>Купить</i>
-        </h1>
+      </h1>
       <h1>Шаурма <i>Купить</i></h1>
     </article>
   </main>
@@ -42,14 +42,14 @@
 
 
   <footer>
-    <h1> <a href="https://www.youtube.com/watch?v=j-iheFkstFQ">Натисни сюди останній шанс замовити!</a></h1> 
+    <h1> <a href="https://www.youtube.com/watch?v=j-iheFkstFQ">Натисни сюди останній шанс замовити!</a></h1>
 
     <h2> Наші соц.мережі</h2>
 
 
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS5UuGp08RPQVsvpH43u3MJ6M-LtRCTlP-DgA&s">
-    <img src="https://images-eds-ssl.xboxlive.com/image?url=4rt9.lXDC4H_93laV1_eHHFT949fUipzkiFOBH3fAiZZUCdYojwUyX2aTonS1aIwMrx6NUIsHfUHSLzjGJFxxsG72wAo9EWJR4yQWyJJaDb6rYcBtJvTvH3UoAS4JFNDaxGhmKNaMwgElLURlRFeVkLCjkfnXmWtINWZIrPGYq0-&format=source">
-    <img src="https://pbs.twimg.com/profile_images/1683495977162792964/uDmdf69S_400x400.jpg"> 
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS5UuGp08RPQVsvpH43u3MJ6M-LtRCTlP-DgA&s" width="100px" height="70px">
+    <img src="https://images-eds-ssl.xboxlive.com/image?url=4rt9.lXDC4H_93laV1_eHHFT949fUipzkiFOBH3fAiZZUCdYojwUyX2aTonS1aIwMrx6NUIsHfUHSLzjGJFxxsG72wAo9EWJR4yQWyJJaDb6rYcBtJvTvH3UoAS4JFNDaxGhmKNaMwgElLURlRFeVkLCjkfnXmWtINWZIrPGYq0-&format=source" width="100px" height="70px">
+    <img src="https://pbs.twimg.com/profile_images/1683495977162792964/uDmdf69S_400x400.jpg" width="100px" height="70px">
   </footer>
 </body>
 
